# Master-Backtester

./: .gitignore  backtester.py  combo_backtester.py  condition_finder.py  dashboard.html  data_fetcher.py  finalbacktesting.py  indicator_engine.py  main.py  oracle_backtester.py  oracle_labeler.py  portfolio_manager.py  price_action_engine.py  pyproject.toml  relevance_analyzer.py  report_exporter.py  signal_combo_backtester.py  signal_evaluator.py  strategies.py  visualizer.py
backtest/: data_fetcher.py  main.py
livetest/: app.py  data_fetcher.py  engine.py  portfolio_manager.py  strategies.py
livetest/templates/: _chart.html  _stats.html  _trades.html  dashboard.html
