[project]
name = "master-backtester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "flask>=3.1.3",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scipy>=1.18.0",
]
